--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
    <div class="parent">
-    <div class="enfant"></div>
-    <div class="enfant"></div>
-    <div class="enfant"></div>
+    <div class="enfant">1</div>
+    <div class="enfant">2</div>
+    <div CLASS="enfant">3</div>
    </div>
 </body>
 </html>
