--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-   <div class="parent">
+    <!-- <div class="parent">
     <div class="enfant">1</div>
     <div class="enfant">2</div>
-    <div CLASS="enfant">3</div>
-   </div>
+    <div class="enfant">3</div>
+   </div> -->
+
+   <div class="parent">
+    <div class ="box"></div>
+   <input type="checkbox" name="" id="checkbox">
+
+
 </body>
 </html>
